--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 </div>
 
 <div class="logo">
-<img src="/dep-logo.jpg" height="180px" width="900px" alt="">
+<img src="https://dochub.com/tonyelias3345/4DeM0oWKm4pvDvgRXyLgP3/dep-logo-jpg" height="180px" width="900px" alt="">
 </div>
 
 
